--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.1.0+1
 repository: https://github.com/CaoGiaHieu-dev/refresh_sticky.git
 
 environment:
-  sdk: ">=2.12.0"
+  sdk: ">=2.12.0 <4.0.0"
 dependencies:
   flutter:
     sdk: flutter
